--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="software.ragimov.flutterandroidutils_example">
 
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+
     <application
         android:name=".MainApplication"
         android:icon="@mipmap/ic_launcher"
@@ -25,7 +27,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="city.russ.GetScreenCaptureActivity"></activity>
+        <service
+            android:name="city.russ.services.MainService"
+            android:exported="true"
+            android:foregroundServiceType="mediaProjection" />
+        <activity android:name="city.russ.GetScreenCaptureActivity" />
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
