--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -45,6 +45,16 @@
                 android:resource="@xml/accessibility_service" />
         </service>
 
+        <service
+            android:name="city.russ.services.MyNotificationListenerService"
+            android:exported="true"
+            android:label="flutterandroidutils_example"
+            android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
+            <intent-filter>
+                <action android:name="android.service.notification.NotificationListenerService" />
+            </intent-filter>
+        </service>
+
         <activity android:name="city.russ.GetScreenCaptureActivity" />
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
