--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,6 +6,8 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        jcenter()
+        maven { url 'https://jitpack.io' }
     }
 
     dependencies {
@@ -18,6 +20,8 @@ rootProject.allprojects {
     repositories {
         google()
         mavenCentral()
+        jcenter()
+        maven { url 'https://jitpack.io' }
     }
 }
 
@@ -52,4 +56,6 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.9.0'
+    // checking Xiaomi Autostart https://github.com/XomaDev/MIUI-Autostart
+    implementation 'com.github.XomaDev:MIUI-autostart:v1.3'
 }
